@@ -70,6 +70,8 @@ body_keypress: function(evt, p)
   unreadIcon="/images/icons/unread.png"
   deletedIcon="/images/icons/deleted.png"
   repliedIcon="/images/icons/replied.png"
+  forwardedIcon="/images/icons/forwarded.png"
+  forwardedrepliedIcon="/images/icons/forwarded_replied.png"
   attachmentIcon="/images/icons/attachment.png"
   flaggedIcon="/images/icons/flagged.png"
   unflaggedIcon="/images/icons/unflagged.png" />
